# kapidox

./: .arcconfig  .gitignore  .reviewboardrc  CMakeLists.txt  LICENSE  README.md  bootstrap-devenv.sh  metainfo.yaml  metainfo_syntax.md  notes.txt  pyproject.toml  requirements-update.sh  requirements.frozen.txt  requirements.txt  setup.py
common/: Doxyfile.global  footer.html  header.html
docs/: Doxyfile.local  depdiagrams.md  kgenapidox.1  kgenframeworksapidox.1  metainfo_syntax.md
kapidox/: argparserutils.py  depdiagram_prepare.py  generator.py  hlfunctions.py  kapidox_generate.py  preprocessing.py  utils.py
kapidox/data/: Doxyfile.global
kapidox/data/htmlresource/css/: customdoxygen.css
kapidox/data/htmlresource/js/: subgroup.js
kapidox/data/templates/: footer.html  frontpage-sidebar.html  subgroup-sidebar.html  subgroup.html
kapidox/depdiagram/: block.py  frameworkdb.py  generate.py
src/: Doxyfile.local  depdiagram-generate  depdiagram-generate-all  depdiagram-prepare  doxyfilewriter.py  kapidox_generate  kf5dot-generate  kf5dot-generate-all  kf5dot-prepare  kgenapidox  kgenapidox.py  kgenframeworksapidox  kgenframeworksapidox.py
src/jquery/: LICENSE  README.md
src/kapidox/: __init__.py  argparserutils.py  doxyfilewriter.py  generator.py  hlfunctions.py  models.py  preprocessing.py  utils.py
src/kapidox/data/: Doxyfile.global  dependencies.md  dependencies.md.mustache  footer.html  frameworks.html  frameworks.yaml  header.html
src/kapidox/data/htmlresource/: ako.webmanifest  ako.webmanifest.license  frameworks.css  frameworks.js  kde.css  search.js
src/kapidox/data/htmlresource/css/: customdoxygen.css  kapidox.css
src/kapidox/data/htmlresource/js/: search.js
src/kapidox/data/templates/: base.html  comments.html  default.html  doxygen.html  doxygen2.html  footer.html  frameworks.html  frontpage-sidebar.html  frontpage.html  fwinfo.html  fwmaintainer.html  libinfo.html  library-sidebar.html  library.html  maintainers.html  qdoc-sidebar.html  search.html  search.php  searchbox.html  subgroup-sidebar.html  subgroup.html
src/kapidox/depdiagram/: __init__.py  framework.py  frameworkdb.py  generate.py  gvutils.py  prepare.py
src/kapidox/kf5dot/: COPYING  README.md  block.py  framework.py  frameworkdb.py  generate-all  kf5-dot.md  kf5dot-generate  kf5dot-prepare  kf5dot-step0  kf5dot.py
tests/: tests
